[package]
name = "rlua_serde"
version = "0.3.0"
authors = ["zrkn <zrkn@email.su>"]
description = "Serde (De)serializer implementation for rlua Value"
repository = "https://github.com/zrkn/rlua_serde/"
readme = "README.md"
keywords = ["lua", "serde"]
license = "MIT"

[dependencies]
rlua  = "0.16"
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
